# light-quant-engine

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
data/: ticks.csv
examples/: example.py
src/quantengine/: __init__.py  bindings.cpp  engine.hpp  rollingWindow.hpp  spscRing.hpp  stats.hpp
