[build-system]
requires = ["scikit-build-core>=0.10.0", "pybind11>=2.11"]
build-backend = "scikit_build_core.build"

[project]
name = "quantengine"
version = "0.1.0"
description = "High-frequency rolling stats engine (C++/pybind11)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.scikit-build]
wheel.expand-macos-universal-tags = true
build-dir = "build"